fdo#39520 - turn DocBasicItems into an rtl::Static to improve shutdown on mac